# Agentix

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
agentix/: agent_loop.py  audit_log.py  audit_summary.py  audit_view.py  cli.py  controller_plan.py  controller_run.py  doctor.py  goal.py  init.py  modules.py  nixos.py  policy.py  preflight.py  proposals.py  public_check.py  public_export.py  self_test.py  source_snapshot.py  status.py  switch_plan.py  workflows.py  worktree_run.py
docs/: CLAUDE-CODE.md  CONTROLLER.md  OPERATING.md
docs/prompts/: claude-agentix-controller.md
scripts/: dev-cycle  pre-commit
tests/: test_agentix_cli.py  test_goal.py  test_management_commands.py  test_policy.py
tests/fixtures/rust-no-flake/: Cargo.toml
